...
    <string name="variants_loading_error">Error while loading variants happened</string>
    <string name="error_title">Error</string>
    <string name="error_details">Details</string>
    <string name="delete_confirmation">Are you sure you want do delete the variant?</string>
    <string name="deletion_successful">Deletion successful</string>
    <string name="deletion_failed">Deletion failed</string>
    <string name="offline">Download</string>
    <string name="variant_saved">Variant downloaded</string>
    <string name="variant_not_saved">Variant not downloaded</string>
    <string name="no_internet">No internet connection</string>
    <string name="used_space">Used space</string>
    <string name="total_used_space">Total</string>
    <string name="loading_title">Loading</string>
...
